add search functionality

--- a/apps/web/assets/application.css
+++ b/apps/web/assets/application.css
@@ -1,7 +1,14 @@
 .ib {
     display: inline-block;
-    border: 1px solid #ccc;
     position: absolute;
     top: 40px;
     right: 60px;
+}
+
+
+.ib-2 {
+    display: inline-block;
+    position: absolute;
+    top: 40px;
+    right: 140px;
 }
