--- a/apps/web/templates/images/search.html.erb
+++ b/apps/web/templates/images/search.html.erb
@@ -1,6 +1,6 @@
 <h2>Search results</h2>
 
-<% if images.any? %>
+<% if images&.any? %>
   <div id="images">
     <% images.each do |image| %>
       <div class="images">
